<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="30">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvEmailaddr"></TextView>

            <EditText
                android:id="@+id/etEmails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvIntro"></TextView>

            <EditText
                android:id="@+id/etIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvPName"></TextView>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvStupid"></TextView>

            <EditText
                android:id="@+id/etThings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvOrder"></TextView>

            <EditText
                android:id="@+id/etAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvOutRo"></TextView>

            <EditText
                android:id="@+id/etOutro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="80"
        android:orientation="vertical">

        <Button
            android:id="@+id/bSentEmail"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/bSend"></Button>
    </LinearLayout>
</LinearLayout>
